--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-parallax-tilt": "^1.7.297"
+    "react-parallax-tilt": "^1.7.297",
+    "resend": "^4.5.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
